# pong

./: CMakeLists.txt  Paddle.cpp  Paddle.h  Position.h  ball.cpp  ball.h  collider.h  collision_box.h  collision_system.h  controller.h  debug_system.cpp  debug_system.h  entity.cpp  entity.h  game_system.cpp  game_system.h  main.cpp  opponent.cpp  opponent.h  paddle.cpp  paddle.h  position.cpp  position.h  registry.h
cpp/: ball.cpp  ball.h  debug_system.cpp  opponent.cpp  opponent.h  paddle.cpp  position.cpp  screen.h
monogame/Pong/: Pong.sln
monogame/Pong/Pong/: Game1.cs  Program.cs
rust/pong/: Cargo.toml  Makefile
rust/pong/src/: main.rs
zig/: build.zig
zig/src/: main.zig
